Closed Bug 1745912 Opened 4 years ago Closed 4 years ago

Fix static-analysis warnings in MediaTransportHandler.cpp

Categories

(Core :: WebRTC: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: padenot, Assigned: padenot)

References

Details

Attachments

(2 files)

No description provided.
Depends on: 1745176
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/226171a2ceef Fix static-analysis warnings in MediaTransportHandler.cpp. r=pehrsons https://hg.mozilla.org/integration/autoland/rev/449877202b07 Use the same type in IDL and implementation file for MediaTransportHandler. r=pehrsons
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: