Bug 1745912 - Fix static-analysis warnings in MediaTransportHandler.cpp. r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D133733